# Tables

./: CMakeLists.txt
include/DataTables/: DataTable.h
include/Tables/: Cell.h  CellBase.h  Column.h  Evaluation.h  NumericalColumn.h  Table.h
src/: Cell.cpp  ColumnBase.h  DataTable.cpp
tests/: FindMajorityTest.cpp  NormalizationTest.cpp  ReshuffleTest.cpp  Test.cpp
